fix big icons and name wrapping on mobile hiscores

--- a/src/components/Hiscores/HiscoresList/HiscoresList.scss
+++ b/src/components/Hiscores/HiscoresList/HiscoresList.scss
@@ -14,7 +14,7 @@
     }
 
     img {
-      height: 60%;
+      height: 20px;
       margin-right: 5px;
       filter: $account-type-shadow;
     }
